# atlas77

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING_GUIDELINES.md  Cargo.toml  LICENSE-BEERWARE.md  LICENSE-MIT.md  README.md  ROADMAP.md  SPECIFICATIONS.md  a.out  build.rs  cliff.toml  output.atlas_asm  output.atlasc  output.txt  test_file.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md  std.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-tinycc.yml  rust-clippy.yml  rust.yml
docs/: SSA_DESIGN.md
docs_local/: iter.atlas.html  iter.atlas.md
examples/: README.MD  alloc.atlas  array_of_array.atlas  atlas_next.atlas  baby_dont_hurt.atlas  block.atlas  borrow_basic.atlas  borrow_conflicts.atlas  class.atlas  codegen_functions_test.atlas  codegen_test.atlas  copy_constructor.atlas  copy_move_test.atlas  delete_assign.atlas  exclusive_mut_ref.atlas  fastfib.atlas  fib.atlas  function.atlas  function_pointer.atlas  generic_functions.atlas  generics.atlas  guessing_game.atlas  hello.atlas  if_else.atlas  import_error.atlas  integer_literals.atlas  iter_test.atlas  lifetime_scope.atlas  list.atlas  map_robin_hood_test.atlas  map_test.atlas  mat_mul.atlas  method_generics.atlas  move_and_borrow.atlas  mut_ref.atlas  namespaces.atlas  nullable_invalid_attribute_placement.atlas  nullable_invalid_method_level_marker.atlas  nullable_invalid_predicate_return.atlas  nullable_invalid_static_method.atlas  (+36 more)
examples/ownership_error_tests/: test_cannot_move_out_of_container.atlas  test_copy_non_copyable.atlas  test_double_move_function.atlas  test_ownership_transfer_in_borrowing_method.atlas  test_use_after_move.atlas
examples/ownership_tests/: test_cannot_move_out_of_container.atlas  test_copy_non_copyable.atlas  test_copy_warning.atlas  test_double_move_function.atlas  test_multiple_borrows.atlas  test_ownership_transfer_in_borrowing_method.atlas
libraries/blue_engine/: engine.atlas  error.atlas
libraries/core/: optional.atlas
libraries/core/experimental/: i128.atlas
libraries/raylib/: raylib.atlas
libraries/std/: README.md  any.atlas  atlas77.h  atomic.atlas  base.c  box.atlas  byte.atlas  cast.atlas  docs.atlas  expected.atlas  fs.atlas  io.atlas  iter.atlas  map.atlas  math.atlas  mem.atlas  memory.atlas  number.atlas  option.atlas  optional.atlas  queue.atlas  result.atlas  shared_ptr.atlas  string.atlas  time.atlas  useful_header.h  vector.atlas
libraries/std/experimental/: README.md  array.atlas  c_vec.atlas  cast.atlas  expected.atlas  future.atlas  hashmap.atlas  iter.atlas  linked_list.atlas  optional.atlas  range.atlas  size_of.atlas  slice.atlas  smart_ptr.atlas  sort.atlas  string_builder.atlas
libraries/unstable_std/: map.atlas  rc.atlas
scripts/: build-prebuilt-tinycc.sh
self/: atlas.toml
self/atlas_c/atlas_frontend/: token.atlas
self/src/: interpreter.atlas  lexer.atlas  main.atlas
self/utils/: span.atlas
src/: lib.rs  main.rs  package.rs  tcc.rs
src/atlas_asm/: asm.rs  error.rs  mod.rs  program.rs
src/atlas_c/: README.md  mod.rs
src/atlas_c/atlas_asm/: error.rs  mod.rs  program.rs
src/atlas_c/atlas_backend/: mod.rs
src/atlas_c/atlas_codegen/: instruction.rs  mod.rs  program.rs  table.rs
src/atlas_c/atlas_frontend/: mod.rs
src/atlas_c/atlas_frontend/lexer/: mod.rs  token.rs
src/atlas_c/atlas_frontend/parser/: ast.rs  error.rs  mod.rs
src/atlas_c/atlas_hir/: arena.rs  error.rs  expr.rs  generic_pool.rs  item.rs  mod.rs  pretty_print.rs  signature.rs  special_methods.rs  stmt.rs  ty.rs  warning.rs
src/atlas_c/atlas_hir/constant_folding_pass/: README.md  mod.rs
src/atlas_c/atlas_hir/dead_code/: README.md
src/atlas_c/atlas_hir/lifetime_pass/: context.rs  (+1 more)
src/atlas_c/atlas_lir/: error.rs  mod.rs  program.rs  test.clif  warning.rs
src/atlas_c/atlas_macro/: mod.rs
src/atlas_c/atlas_new_codegen/: mod.rs
src/atlas_c/utils/: mod.rs
src/atlas_docs/: mod.rs
src/atlas_docs/templates/: index.html  item.html  layout.html  style.css
src/atlas_lib/: mod.rs
src/atlas_lib/graphics/: utils.atlas
src/atlas_lib/std/: array.atlas  fs.atlas  io.atlas  result.atlas  string.atlas  time.atlas  vector.atlas  vector_new.atlas
src/atlas_vm/: error.rs  heap.rs  instruction.rs  mod.rs  new_instruction.rs  object.rs  stack.rs  vm_data.rs
src/atlas_vm/libraries/: fs.rs  io.rs  list.rs  math.rs  mem.rs  mod.rs  option.rs  result.rs  string.rs  time.rs  vector.rs
src/atlas_vm/memory/: object_map.rs  stack.rs  varmap.rs  vm_data.rs
src/atlas_vm/runtime/: arena.rs  instruction.rs  mod.rs  vm_state.rs
src/atlas_vm_new/: heap.rs  instruction.rs  mod.rs  object.rs  stack.rs  vm_data.rs
src/atlas_vm_new/runtime/: mod.rs
stdlib/: io.atlas  math.atlas  option.atlas  string.atlas  time.atlas  vector.atlas
(+13 files in other folders)
