[package]
name = "atlas_77"
version = "0.6.0-dev2"
edition = "2024"
description = "Programming language with strong interoperability with Rust (WIP)"
authors = ["Gipson62", "ElhamAryanpur"]
license = "MIT"
repository = "https://github.com/atlas77-lang/Atlas77"
keywords = ["programming", "language", "compiler", "atlas77"]
categories = ["compilers"]
homepage = "https://atlas77-lang.github.io/Atlas77/docs/latest/index.html"
readme = "README.md"


[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
strip = "debuginfo"
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[lib]
doctest = false

[[bin]]
name = "atlas_77"
path = "src/main.rs"

[dependencies]

# For the CLI
clap = { version = "4.5.53", features = ["derive"] }
bumpalo = "3.19.0"
# For pretty printing of errors
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
logos = "0.15.1"
heck = "0.5.0"
include_dir = "0.7.4"
rand = "0.10.0-rc.5"
time = { version = "0.3.44", features = ["formatting"] }