[package]
name = "atlas_77"
version = "0.7.3"
edition = "2024"
description = "Programming language with strong interoperability with Rust (WIP)"
authors = ["Gipson62"]
license = "MIT"
repository = "https://github.com/atlas77-lang/Atlas77"
keywords = ["programming", "language", "compiler", "atlas77"]
categories = ["compilers"]
homepage = "https://atlas77-lang.github.io/atlas77-docs/"
readme = "README.md"


[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
strip = "debuginfo"
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[lib]
doctest = false

[[bin]]
name = "atlas_77"
path = "src/main.rs"

[dependencies]
# For the CLI
clap = { version = "4.5.54", features = ["derive"] }
bumpalo = "3.19.1"
# For pretty printing of errors
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
# For the Lexer
logos = "0.16.0"
# For case checks
heck = "0.5.0"
# To store the std library
include_dir = "0.7.4"
# std/math needs it
rand = "0.9.2"
# std/time needs it
time = { version = "0.3.44", features = ["formatting"] }

# For documentation
pulldown-cmark = { version = "0.13", optional = true } # markdown parsing(optional)
tera = { version = "1.20", optional = true }           # HTML templating
syntect = { version = "5.3", optional = true }         # code highlighting 
serde = { version = "1.0", features = ["derive"], optional = true }  # for serializing the table of contents
serde_json = { version = "1.0", optional = true }                              # for serializing the table of contents

# Let's put that under the docs feature
[features]
default = ["pulldown-cmark", "tera", "syntect", "serde", "serde_json"]
docs = ["pulldown-cmark", "tera", "syntect", "serde", "serde_json"]